Arreglo de bugs overflow en celular

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,7 @@ section{
 
 .blob {
     position: absolute;
+    overflow: hidden;
     width: 500px;
     height: 500px;
     background: linear-gradient(0deg, rgba(255,156,8,1) 0%, rgba(246,103,0,1) 100%);
